# rusd-solana-contracts

./: Anchor.toml  README.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml
programs/rusd_omnichain_adapter/: Cargo.toml
programs/rusd_omnichain_adapter/src/: lib.rs
programs/rusd_omnichain_adapter/src/instructions/: init_oft.rs
tasks/: index.ts
tasks/common/: sendOFT.ts  utils.ts  wire.ts
tasks/solana/: createMintAccount.ts  createOFT.ts  mintTokenWIthMemo.ts  multisig.ts  sendSolana.ts  setPeer.ts  utils.ts
